--- a/texs/reference.bib
+++ b/texs/reference.bib
@@ -15,6 +15,23 @@ month={March}
 }
 
 
+@inproceedings{
+	hand_decompilation,
+ author = {Van Emmerik, Mike and Waddington, Trent},
+ title = {Using a Decompiler for Real-World Source Recovery},
+ booktitle = {Proceedings of the 11th Working Conference on Reverse Engineering},
+ series = {WCRE '04},
+ year = {2004},
+ isbn = {0-7695-2243-2},
+ pages = {27--36},
+ numpages = {10},
+ url = {http://dl.acm.org/citation.cfm?id=1038267.1039035},
+ acmid = {1039035},
+ publisher = {IEEE Computer Society},
+ address = {Washington, DC, USA},
+ keywords = {Reverse engineering, decompilation, source code recovery, native executable file, experience},
+} 
+
 
 @article{
 	deep_programming_matome,
@@ -287,21 +304,125 @@ doi = {10.3115/1073083.1073135}
 } 
 
 
+@inproceedings{
+	disasm_obfuscate,
+ author = {Linn, Cullen and Debray, Saumya},
+ title = {Obfuscation of Executable Code to Improve Resistance to Static Disassembly},
+ booktitle = {Proceedings of the 10th ACM Conference on Computer and Communications Security},
+ series = {CCS '03},
+ year = {2003},
+ isbn = {1-58113-738-9},
+ location = {Washington D.C., USA},
+ pages = {290--299},
+ numpages = {10},
+ url = {http://doi.acm.org/10.1145/948109.948149},
+ doi = {10.1145/948109.948149},
+ acmid = {948149},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {code obfuscation, disassembly},
+} 
+
 
 @misc{
 	github,
-	author = {},
 	note = "\url{https://github.com/}"
 }
 
 @misc{
+	snowman,
+	title = {Snowman decompiler},
+	note = "\url{https://derevenets.com/}"
+}
+
+@misc{
+	REC,
+	title = {REC Studio 4 - Reverse Engineering Compiler},
+	note = "\url{http://www.backerstreet.com/rec/rec.htm}"
+}
+
+@misc{
 	clang,
-	author = {},
 	note = "\url{https://clang.llvm.org/}"
 }
 
 @misc{
+	malware_increase,
+	author = {AV-TEST,Institute},
+	note = "\url{https://www.av-test.org/en/statistics/malware/}"
+}
+
+@misc{
+	hex_rays,
+	title = {Decompilers and beyond},
+	institute = {Hex-Rays SA},
+	author = {Ilfak, Guilfanov},
+	year = {2008},
+	note = "\url{https://www.hex-rays.com/products/ida/support/ppt/decompilers_and_beyond_white_paper.pdf}"
+}
+
+@inproceedings{
+	decompiler_path,
+  title={Native x86 decompilation using semantics-preserving structural analysis and iterative control-flow structuring},
+  author={Brumley, David and Lee, JongHyup and Schwartz, Edward J and Woo, Maverick},
+  booktitle={Presented as part of the 22nd $\{$USENIX$\}$ Security Symposium ($\{$USENIX$\}$ Security 13)},
+  pages={353--368},
+  year={2013}
+}
+
+
+@misc{
 	pycparser,
-	author = {},
+	title = {pycparser},
 	note = "\url{https://github.com/eliben/pycparser}"
 }
+
+@inproceedings{
+	malware_case_1,
+  title={Evidence of Advanced Persistent Threat: A case study of malware for political espionage},
+  author={Li, Frankie and Lai, Anthony and Ddl, Ddl},
+  booktitle={Malicious and Unwanted Software (MALWARE), 2011 6th International Conference on},
+  pages={102--109},
+  year={2011},
+  organization={IEEE}
+}
+
+@article{
+	malware_case_2,
+  title={A case study of eurograbber: How 36 million euros was stolen via malware},
+  author={Kalige, Eran and Burkey, Darrell and Director, IPS},
+  journal={Versafe (White paper)},
+  volume={35},
+  year={2012}
+}
+
+@article{	
+	malware_case_3,
+	 title={Smartphone Security Evaluation-The Malware Attack Case.},
+  author={Mylonas, Alexios and Dritsas, Stelios and Tsoumas, Bill and Gritzalis, Dimitris},
+  journal={SECRYPT},
+  volume={11},
+  pages={25--36},
+  year={2011}
+}
+
+@article{	
+	malware_case_4,
+	title={A Case Study of Four Recent High-Impact Malware Attacks},
+  author={Jonas,Haglund},
+	institute = {Engvall Security},
+	year = {2017},
+	url={https://www.engsec.se/wp-content/uploads/2018/06/Engvall-Security-Malware-Case-Studies-Jonas-Haglund.pdf}
+}
+
+@article{
+	mal_anal_tool,
+  title={Malware Analysis: An Introduction},
+  author={Dennis, Distler},
+  year = {2008},
+  month = feb,
+  url={https://www.sans.org/reading-room/whitepapers/malicious/malware-analysis-introduction-2103},
+}
+
+
+
